excerpt_separator - posts

--- a/clinic-information/clinic/index.html
+++ b/clinic-information/clinic/index.html
@@ -4,7 +4,7 @@ title: "Clinic Pictures"
 category: clinic-information
 slug: clinic
 post_id: 1000
-excerpt_separator: Picure Gallery of KItchener Massage Therapy Clinic
+excerpt_separator: Picure Gallery of Kitchener Massage Therapy Clinic
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, clinic pictures, massage clinic pictures
 ---
 <!-- Content
