--- a/clinic-information/note-to-new-massage-therapy-clients/index.html
+++ b/clinic-information/note-to-new-massage-therapy-clients/index.html
@@ -2,6 +2,7 @@
 layout: page
 title: "Note to New Massage Clients"
 category: clinic-information
+excerpt_separator: Important infromation for new Kitchener Massage Therapy clients.
 slug: note-to-new-massage-therapy-clients
 post_id: 224
 excerpt_separator: What you need to know when you come in for your first massage therapy appointment at KWmassage.
