--- a/contact/index.html
+++ b/contact/index.html
@@ -2,6 +2,7 @@
 layout: page
 title: "Contact"
 slug: contact
+excerpt_separator: "To contact Kitchener Massage Therapy email Jeremy at jeremy@kwmassage.com or call 519-745-4112."
 post_id: 21
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener, registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, 
 excerpt_separator: The quickest way to book an appointment with me is to book a treatment online or get in touch with me directly to make a massage therapy appointment.
