--- a/knowledge-centre/general-massage-therapy/index.html
+++ b/knowledge-centre/general-massage-therapy/index.html
@@ -3,8 +3,8 @@ layout: page
 title: "General Massage Therapy"
 category: knowledge-centre
 slug: general-massage-therapy
+excerpt_separator: "An index of articles related to General Massage Therapy topics."
 post_id: 371
-excerpt_separator: What is Deep Tissue Massage? Trigger Points and Trigger Point Therapy; Does Deep Tissue Massage Hurt? Why does Jeremy choose to practice Deep Tissue
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy 
 ---
 {% for post in site.posts %}
