--- a/knowledge-centre/rock-climbing/index.html
+++ b/knowledge-centre/rock-climbing/index.html
@@ -2,9 +2,9 @@
 layout: page
 title: "Rock Climbing"
 category: knowledge-centre
+excerpt_separator: "An index of articles related to Rock Climbing and Massage Therapy"
 slug: rock-climbing
 post_id: 376
-excerpt_separator: Rock climbing and how to treat climbing injuries by massage therapist Kitchener
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, sports massage, rock climbing injury, rock climbing
 ---
 {% for post in site.posts %}
