--- a/knowledge-centre/facts-about-registered-massage-therapy-in-ontario/index.html
+++ b/knowledge-centre/facts-about-registered-massage-therapy-in-ontario/index.html
@@ -3,8 +3,8 @@ layout: page
 title: "Facts"
 category: knowledge-centre
 slug: facts-about-registered-massage-therapy-in-ontario
+excerpt_separator: "Facts About Registered Massage Therapists in Ontario"
 post_id: 259
-excerpt_separator: Your Massage Therapist in Ontario is a regulated Health Care professional who has received two years of comprehensive training in anatomy, physiology, a...
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener, registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, 
 ---
 <h2>Facts About Registered Massage Therapists in Ontario</h2>
