--- a/knowledge-centre/index.html
+++ b/knowledge-centre/index.html
@@ -2,8 +2,8 @@
 layout: page
 title: "Knowledge Centre"
 slug: knowledge-centre
+excerpt_separator: "An index of articles related to Stretching and Massage Therapy"
 post_id: 20
-excerpt_separator: Information about registered massage therapy and massage therapists in Kitchener Waterloo area. 
 meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener, registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, 
 ---
 <h2>Knowledge Centre</h2>
