--- a/clinic-information/note-to-new-massage-therapy-clients/index.html
+++ b/clinic-information/note-to-new-massage-therapy-clients/index.html
@@ -40,3 +40,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 <p>After the massage treatment, it is also time to handle the payment and rebooking. I don’t have credit or debit machines so cash payment is necessary.</p>
 
 <p>If you have extended health care benefits, on my receipt you will find my <a href="{{site.url}}/generalmassagetherapy/governance-of-massage-therapy/index.html">registration number as a registered massage therapist</a>.  When you send your receipt to your health care company for reimbursement, this registration is what they need for approval.</p>
+
+<p>
+Once you have made your way home, a few days after the treatment, I would request that you take a few moments out of your day to fill out my <a href="{{site.url}}/clinic-information/client-feedback/index.html">Client Feedback Survey</a>. This is a valuable process because it allows me to continue growing as a therapist and improve my business in meaningful ways.
+</p>
