--- a/contact/index.html
+++ b/contact/index.html
@@ -10,7 +10,7 @@ excerpt_separator: The quickest way to book an appointment with me is to book a 
 
 <p>To get in touch with me directly to make a <a title="Book Massage Therapy Appointment Online" href="{{site.url}}/clinic-information/index.html">massage therapy appointment </a>in Kitchener/Waterloo, you can call me, send me an email or text message. You can also use the Contact Form below to send me a message.</p>
 
-<p><b>229 Frederick Street<br />
+<p><b>351 Carson Drive<br />
 Kitchener, ON<br />
 (519) 745-4112<br />
 <a href="mailto:Jeremy@kwmassage.com">Jeremy@kwmassage.com</a></b></p>
@@ -24,14 +24,14 @@ Kitchener, ON<br />
 
 							jQuery('#google-map').gMap({
 
-							    latitude: 43.4539720,
-							    longitude: -80.4806040,
+							    latitude: 43.461053,
+							    longitude: -80.449025,
 								maptype: 'ROADMAP',
 								zoom: 14,
 								markers: [
 									{
-										latitude: 43.4539720,
-							    		longitude: -80.4806040,
+										latitude: 43.461053,
+							    		longitude: -80.449025,
 										html: '<div style="width: 300px;"><h4 style="margin-bottom: 8px;">KWmassage</h4><i>Kitchener Massage Therapy</i><p class="nobottommargin">Specializing in Deep Tissue Massage and Trigger Point Release Therapy to bring you the relief you need from repetitive strain injuries and postural dysfunctions related to sports, the workplace, and family life.</p></div>',
 
 									}
