--- a/_site_production/index.html
+++ b/_site_production/index.html
@@ -174,7 +174,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
 
       <div dir="lft" class="tab-content clearfix" id="tab-hours">
-
         <div style="font-size: 16px; line-height: 18px" data-class-lg="rightmargin-sm leftmargin-sm" data-class-md="rightmargin-sm leftmargin-sm" data-class-sm="rightmargin-sm leftmargin-sm" data-class-xs="rightmargin-sm leftmargin-sm" data-class-xxs="">
           <div style="margin-right: 0px;" class="row rates_no_margin" data-class-xxs="center">
 	<h3>Hours</h3>
@@ -206,8 +205,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
       </div>
+      
       <div dir="lft" class="tab-content clearfix" id="tab-rates">
-
         <div style="font-size: 16px; line-height: 18px" data-class-lg="rightmargin-lg leftmargin-lg" data-class-md="rightmargin-lg leftmargin-lg" data-class-sm="rightmargin-lg leftmargin-lg" data-class-xs="rightmargin-sm leftmargin-sm" data-class-xxs="">
           <div style="margin-right: 0px;" class="row rates_no_margin" data-class-xxs="center">
 	<h3>Rates</h3>
@@ -230,8 +229,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
       </div>
-
-     <!--  <div dir="lft" class="tab-content clearfix" id="tab-contact-form">      
+<!-- 
+      <div dir="lft" class="tab-content clearfix" id="tab-contact-form">      
         <div class="widget quick-contact-widget"> 
           <h4>Send Message</h4>
 
@@ -524,11 +523,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <!-- Contact Form -->
             <div class="col_one_third">
                <div class="widget quick-contact-widget">
-                    <!-- <h4>Send Message</h4>
+                    <h4>Send Message</h4>
 
 <div id="footer-contact-form-result" data-notify-type="success" data-notify-msg="<i class=icon-ok-sign></i> Message Sent Successfully!"></div>
 
-<form id="footer-contact-form" name="footer-contact-form" action="/include/footercontact.php" method="post" class="nobottommargin">
+<form id="footer-contact-form" name="footer-contact-form" action="https://formspree.io/jeremy@kwmassage.com" method="post" class="nobottommargin">
 
     <div class="form-process"></div>
     <div class="input-group divcenter">
@@ -544,7 +543,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <button type="submit" id="footer-contact-form-submit" name="footer-contact-form-submit" class="btn btn-danger fright nomargin" value="submit">Send Email</button>
 </form>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
     $("#footer-contact-form").validate({
         submitHandler: function(form) {
             $(form).animate({ opacity: 0.4 });
@@ -563,7 +562,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     });
 </script>
 
- -->
+to revert back to php mailer incert: /include/footercontact.php in the form action  -->
                 </div>
             </div>
             <!-- End Contact Form -->
