--- a/_site_production/stretching/how-to-stretch-you-rhomboids/index.html
+++ b/_site_production/stretching/how-to-stretch-you-rhomboids/index.html
@@ -258,11 +258,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <!-- Contact Form -->
             <div class="col_one_third">
                <div class="widget quick-contact-widget">
-                    <!-- <h4>Send Message</h4>
+                    <h4>Send Message</h4>
 
 <div id="footer-contact-form-result" data-notify-type="success" data-notify-msg="<i class=icon-ok-sign></i> Message Sent Successfully!"></div>
 
-<form id="footer-contact-form" name="footer-contact-form" action="/include/footercontact.php" method="post" class="nobottommargin">
+<form id="footer-contact-form" name="footer-contact-form" action="https://formspree.io/jeremy@kwmassage.com" method="post" class="nobottommargin">
 
     <div class="form-process"></div>
     <div class="input-group divcenter">
@@ -278,7 +278,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <button type="submit" id="footer-contact-form-submit" name="footer-contact-form-submit" class="btn btn-danger fright nomargin" value="submit">Send Email</button>
 </form>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
     $("#footer-contact-form").validate({
         submitHandler: function(form) {
             $(form).animate({ opacity: 0.4 });
@@ -297,7 +297,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     });
 </script>
 
- -->
+to revert back to php mailer incert: /include/footercontact.php in the form action  -->
                 </div>
             </div>
             <!-- End Contact Form -->
