--- a/_site_production/generalmassagetherapy/epsom-salt-bath/index.html
+++ b/_site_production/generalmassagetherapy/epsom-salt-bath/index.html
@@ -250,11 +250,11 @@ Keeping your neck and shoulder in the water as much as possible will allow the s
             <!-- Contact Form -->
             <div class="col_one_third">
                <div class="widget quick-contact-widget">
-                    <!-- <h4>Send Message</h4>
+                    <h4>Send Message</h4>
 
 <div id="footer-contact-form-result" data-notify-type="success" data-notify-msg="<i class=icon-ok-sign></i> Message Sent Successfully!"></div>
 
-<form id="footer-contact-form" name="footer-contact-form" action="/include/footercontact.php" method="post" class="nobottommargin">
+<form id="footer-contact-form" name="footer-contact-form" action="https://formspree.io/jeremy@kwmassage.com" method="post" class="nobottommargin">
 
     <div class="form-process"></div>
     <div class="input-group divcenter">
@@ -270,7 +270,7 @@ Keeping your neck and shoulder in the water as much as possible will allow the s
     <button type="submit" id="footer-contact-form-submit" name="footer-contact-form-submit" class="btn btn-danger fright nomargin" value="submit">Send Email</button>
 </form>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
     $("#footer-contact-form").validate({
         submitHandler: function(form) {
             $(form).animate({ opacity: 0.4 });
@@ -289,7 +289,7 @@ Keeping your neck and shoulder in the water as much as possible will allow the s
     });
 </script>
 
- -->
+to revert back to php mailer incert: /include/footercontact.php in the form action  -->
                 </div>
             </div>
             <!-- End Contact Form -->
