--- a/_site_production/generalmassagetherapy/what-is-deep-tissue-massage/index.html
+++ b/_site_production/generalmassagetherapy/what-is-deep-tissue-massage/index.html
@@ -6,7 +6,7 @@
 
   <!-- Stylesheets
   ============================================= -->
-  <link href="http://fonts.googleapis.com/css?family=Lato:300,400,400italic,600,700|Raleway:300,400,500,600,700|Crete+Round:400italic" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400italic,600,700|Raleway:300,400,500,600,700|Crete+Round:400italic" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="/css/bootstrap.css" type="text/css" />
   <link rel="stylesheet" href="/style.css" type="text/css" />
   <link rel="stylesheet" href="/css/dark.css" type="text/css" />
@@ -21,7 +21,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <!--[if lt IE 9]>
-    <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+    <script src="https://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
   <![endif]-->
   <!--[if IE]>
     <link rel="stylesheet" href="/css/ie_no_paralax.css" type="text/css" />
@@ -152,7 +152,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <p>In order to access deeper layers of muscle and connective tissue in the body, your massage therapist needs to use considerable pressure; to achieve that pressure, he or she needs skilled in using forearms, elbows, and knuckles to perform the massage techniques.</p>
 
-<p><a href="http://maps.google.ca/maps/place?rlz=1I7DDCA_en&amp;oe=UTF-8&amp;redir_esc=&amp;um=1&amp;ie=UTF-8&amp;q=massage+therapist+kitchener&amp;fb=1&amp;gl=ca&amp;hq=massage+therapist&amp;hnear=Kitchener,+ON&amp;cid=4280028541904649170&amp;ei=oGLATc6vDdOftwfb3ey8BQ&amp;sa=X&amp;oi=local_result&amp;ct=map-marker-link&amp;resnum=7&amp;ved=0CG4QrwswBg">Deep Tissue massage </a>provides a more therapeutic effect by working more than just superficial layers in the body. Deep Tissue massage gets right down to the core of your muscular system to remove chronic tension, scar tissue, and adhesions between muscles and connective tissue, helping you get the relief you need faster.</p>
+<p><a href="https://maps.google.ca/maps/place?rlz=1I7DDCA_en&amp;oe=UTF-8&amp;redir_esc=&amp;um=1&amp;ie=UTF-8&amp;q=massage+therapist+kitchener&amp;fb=1&amp;gl=ca&amp;hq=massage+therapist&amp;hnear=Kitchener,+ON&amp;cid=4280028541904649170&amp;ei=oGLATc6vDdOftwfb3ey8BQ&amp;sa=X&amp;oi=local_result&amp;ct=map-marker-link&amp;resnum=7&amp;ved=0CG4QrwswBg">Deep Tissue massage </a>provides a more therapeutic effect by working more than just superficial layers in the body. Deep Tissue massage gets right down to the core of your muscular system to remove chronic tension, scar tissue, and adhesions between muscles and connective tissue, helping you get the relief you need faster.</p>
 
 
                 </div>
@@ -168,7 +168,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
               <div class="widget clearfix">
                 
-                  <!-- Hours -->
+                  Hours -->
 <div style="margin-right: 0px;" class="row rates_no_margin" data-class-xxs="center">
 	<h3>Hours</h3>
 	<div style="text-align: left; margin-left: 25px; width: 70px;" class="col_half norightmargin inline-block">
@@ -217,17 +217,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- Schedule Now Button -->
 <div>
 	<a href="/clinic-information/index.html" title="Schedule Massage Therapy Appointment Now" style="margin: 10px" class="btn btn-danger fright">Schedule Now</a>
+	<a href="https://www.google.ca/search?authuser=1&source=hp&ei=kafZW_SpLZCp5wLY2ZvYBw&q=kitchener%20massage%20therapy&oq=kitchener+massage+therapy&gs_l=psy-ab.3..0j0i22i30k1l7j38l2.2600.6429.0.6948.26.17.0.8.8.0.191.1672.10j6.16.0....0...1c.1.64.psy-ab..2.24.1732.0..0i131k1.0.MPijVrvqgqY&npsic=0&rflfq=1&rlha=0&rllag=43456213,-80452137,1197&tbm=lcl&rldimm=4280028541904649170&ved=2ahUKEwjm4Pas3rDeAhWKjFkKHbEvDXoQvS4wAHoECAQQLQ&rldoc=1&tbs=lrf:!2m1!1e2!2m1!1e3!3sIAE,lf:1,lf_ui:2#lrd=0x882bf4946918d4f9:0x3b65b74844c27bd2,3,,,&rldoc=1&rlfi=hd:;si:4280028541904649170;mv:!3m12!1m3!1d23173.66859490525!2d-80.45746170000001!3d43.44580034999999!2m3!1f0!2f0!3f0!3m2!1i461!2i384!4f13.1;tbs:lrf:!2m1!1e2!2m1!1e3!3sIAE,lf:1,lf_ui:2" title="Leave a review for KW Massage" style="margin: 10px" class="btn btn-danger fright">Leave a Review</a>
 </div>
 <!-- Schedule Now Button Ends -->
 <div class="clearfix"></div>
 
 <!-- CMTO Logo -->
 <div class="testimonial bottommargin-sm">
-	<a href="http://www.cmto.com/" target="_blank" title="College of Massage Therapists of Ontario"><img alt="College of Massage Therapists of Ontario" class="attachment-200x105" style="max-width: 100%;" src="/assets/images/cmto-logo.jpg"></a>
+	<a href="https://www.cmto.com/" target="_blank" title="College of Massage Therapists of Ontario"><img alt="College of Massage Therapists of Ontario" class="attachment-200x105" style="max-width: 100%;" src="/assets/images/cmto-logo.jpg"></a>
 </div>
 
-<!-- RMTAO Logo -->
-<div class="testimonial bottommargin-sm">
+<!-- RMTAO Logo --> 
+<!-- not a succure site - remove until  -->
+<!-- <div class="testimonial bottommargin-sm">
 	<a href="http://www.rmtao.com/" target="_blank" class="widget_sp_image-image-link" title="Registered Massage Therapists Association of Ontario"><img alt="Registered Massage Therapists Association of Ontario" class="attachment-full" style="max-width: 100%;" src="/assets/images/rmtao_logo_english_lead.gif"></a>
 </div>                
                 
