update link to google profile

--- a/_site_production/generalmassagetherapy/what-can-deep-tissue-massage-treat/index.html
+++ b/_site_production/generalmassagetherapy/what-can-deep-tissue-massage-treat/index.html
@@ -158,13 +158,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<li>Compression syndromes</li>
 		<li>Contractures</li>
 		<li>Cramps</li>
-		<li>Degenerative disc disease(DDD)</li>
+		<li><a href="https://www.kwmassage.com/generalmassagetherapy/degenerative_disc_disease/index.html">Degenerative disc disease(DDD)</a></li>
 		<li>Dislocations</li>
 		<li>Dupuytrens' contracture</li>
 		<li>Fibrositis and fibrosis</li>
 		<li>Foot/plantar fasciitis/ples planus - flat foot fractures</li>
 		<li>Frozen shoulder</li>
-		<li><a href="https://www.kwmassage.com/generalmassagetherapy/tension-headaches-3/index.html">Headache / migraine</a></li>
+		<li><a href="https://www.kwmassage.com/generalmassagetherapy/tension-headaches-3/index.html">Headache / Migraine</a></li>
 		<li>Herniated disc</li>
 		<li>Iliotibial band contracture</li>
 		<li>Jaw pain/TMJ</li>
@@ -349,7 +349,7 @@ to revert back to php mailer incert: /include/footercontact.php in the form acti
                             <i class="icon-facebook"></i>
                         </a>
                         <!-- Google+ badge -->
-                        <a href="https://plus.google.com/+Kwmassage?prsrc=3" class="social-icon si-dark si-gplus">
+                        <a href="https://plus.google.com/u/0/114786026162432224768" class="social-icon si-dark si-gplus">
                             <i class="icon-gplus"></i>
                             <i class="icon-gplus"></i>
                         </a>
