--- a/_site_production/index.html
+++ b/_site_production/index.html
@@ -420,9 +420,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <h3>Back Pain</h3>
         <ul class="iconlist iconlist-color nobottommargin">
-          <li><i class="icon-caret-right"></i> Degenerative Discs</li>
+          <li><i class="icon-caret-right"></i> <a href="https://www.kwmassage.com/generalmassagetherapy/degenerative_disc_disease/index.html">Degenerative disc disease</a></li>
           <li><i class="icon-caret-right"></i> Herniated Disc</li>
-          <li><i class="icon-caret-right"></i> Low Back Pain</li>
+          <li><i class="icon-caret-right"></i> <a href="https://www.kwmassage.com/generalmassagetherapy/low-back-pain/index.html">Low Back pain</a></li>
           <li><i class="icon-caret-right"></i> Postural Disorders</li>
         </ul>
       </div>
@@ -452,7 +452,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <ul class="iconlist iconlist-color nobottommargin">
           <li><i class="icon-caret-right"></i> Arthritis</li>
           <li><i class="icon-caret-right"></i> Carpal Tunnel Syndrome</li>
-          <li><i class="icon-caret-right"></i> Headaches</li>
+          <li><i class="icon-caret-right"></i> <a href="https://www.kwmassage.com/generalmassagetherapy/tension-headaches-3/index.html">Headache/Migraine</a></li>
           <li><i class="icon-caret-right"></i> Neck pain</li>
         </ul>
       </div>
@@ -581,7 +581,7 @@ to revert back to php mailer incert: /include/footercontact.php in the form acti
                             <i class="icon-facebook"></i>
                         </a>
                         <!-- Google+ badge -->
-                        <a href="https://plus.google.com/+Kwmassage?prsrc=3" class="social-icon si-dark si-gplus">
+                        <a href="https://plus.google.com/u/0/114786026162432224768" class="social-icon si-dark si-gplus">
                             <i class="icon-gplus"></i>
                             <i class="icon-gplus"></i>
                         </a>
