--- a/_site_production/knowledge-centre/general-massage-therapy/index.html
+++ b/_site_production/knowledge-centre/general-massage-therapy/index.html
@@ -150,6 +150,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
   	
   		<p>
+  			<h4>Degenerative Disc Disease</h4>
+  			<div class="date">01 Nov 2018</div>
+  			<p>Degeneration of the vertebral discs is a natural process as a person ages. The discs undergo slow wear and tear over many years, as a side effect of normal daily stresses. As this process continues the size and shape of the discs change, the discs loose vertical height, therefore leading to less space between each vertebra. Though not always symptomatic, Degenerative Disc Disease(DDD) can cause acute or chronic pain.</p>
+
+ ...<a title="Read More" href="https://www.kwmassage.com/generalmassagetherapy/degenerative_disc_disease/">read more...</a>
+  		</p>
+  	
+  
+
+  
+  	
+  		<p>
   			<h4>Does the Weather Make our Muscles Stiff? </h4>
   			<div class="date">17 Jul 2017</div>
   			<p>It’s May 16th and the weather in the Kitchener, Waterloo has been miserable. We had a few weeks of warmish weather but now we are right back to cold and rainy. You might ask why a <a href="https://www.kwmassage.com/">massage therapist </a>would care about the weather. It’s been good for business, that’s why I care. Our muscles get tight and stiff, old pains come back to the surface, and new ones come out. When this happens, we need to see our massage therapist.
@@ -568,7 +580,7 @@ to revert back to php mailer incert: /include/footercontact.php in the form acti
                             <i class="icon-facebook"></i>
                         </a>
                         <!-- Google+ badge -->
-                        <a href="https://plus.google.com/+Kwmassage?prsrc=3" class="social-icon si-dark si-gplus">
+                        <a href="https://plus.google.com/u/0/114786026162432224768" class="social-icon si-dark si-gplus">
                             <i class="icon-gplus"></i>
                             <i class="icon-gplus"></i>
                         </a>
