--- a/_site_production/knowledge-centre/stretching/index.html
+++ b/_site_production/knowledge-centre/stretching/index.html
@@ -156,15 +156,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
 
   
+  	
+  
+
+  
 
   
   	
   	<p>
   		<h4>Stretch Your Upper Trapezius Muscle</h4>
   		<div class="date">08 Jun 2016</div>
-  		<p>To <a href="https://www.kwmassage.com/stretching/general-guidelines-for-stretching/index.html">stretch</a> your <a href="https://www.kwmassage.com/generalmassagetherapy/tension-headaches-3/index.html">Upper Trapezius Muscle, </a>begin in a seated position.With your shoulders relaxed and your head in a natural position, carefully bend your neck to bring your right ear toward your right armpit. If more pressure is needed to feel the <a href="https://www.kwmassage.com/stretching/general-guidelines-for-stretching/index.html">stretch</a>, you can use your right hand to gently pull from the side of your head just above your left ear toward your right armpit.
+  		<p>To <a href="https://www.kwmassage.com/stretching/general-guidelines-for-stretching/index.html">stretch</a> your <a href="https://www.kwmassage.com/generalmassagetherapy/tension-headaches-3/index.html">Upper Trapezius Muscle, </a>begin in a seated position.With your shoulders relaxed and your head in a natural position, carefully bend your neck to bring your right ear toward your right armpit. If more pressure is needed to feel the <a href="https://www.kwmassage.com/stretching/general-guidelines-for-stretching/index.html">stretch</a>, you can use your right hand to gently pull from the side of your head just above your left ear toward your right armpit.</p>
 
-</p>
  ...<a title="Read More" href="https://www.kwmassage.com/stretching/stretch-your-upper-trapezius-muscle-2/">read more...</a>
   	</p>
     
@@ -469,7 +472,7 @@ to revert back to php mailer incert: /include/footercontact.php in the form acti
                             <i class="icon-facebook"></i>
                         </a>
                         <!-- Google+ badge -->
-                        <a href="https://plus.google.com/+Kwmassage?prsrc=3" class="social-icon si-dark si-gplus">
+                        <a href="https://plus.google.com/u/0/114786026162432224768" class="social-icon si-dark si-gplus">
                             <i class="icon-gplus"></i>
                             <i class="icon-gplus"></i>
                         </a>
