--- a/_site_production/generalmassagetherapy/degenerative_disc_disease/index.html
+++ b/_site_production/generalmassagetherapy/degenerative_disc_disease/index.html
@@ -35,12 +35,13 @@
 
   <!-- Document Title
   ============================================= -->
-  <title>KWmassage | Low Back Pain</title>
+  <title>KWmassage | Degenerative Disc Disease</title>
   
   <!-- Meta Tags
   ============================================= -->
-  <meta name="description" content="Low back pain is no laughing matter but Massage Therapy and regular stretching can help.">
-  <meta name="keywords" content="Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, back pain, pain , low back pain">
+  <meta name="description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
+">
+  <meta name="keywords" content="Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy,">
   <meta name="author" content="Jeremy Bissonnette, Registered Massage Therapist" >
  
 </head>
@@ -121,11 +122,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
       <div class="container clearfix">
         <h1>Kitchener Massage Therapy</h1>
-        <span>Low Back Pain</span>
+        <span>Degenerative Disc Disease</span>
         <ol class="breadcrumb">
           <li><a href="https://www.kwmassage.com/index.html">Home</a></li>
           <li><a href="https://www.kwmassage.com/generalmassagetherapy/index.html">generalmassagetherapy</a></li>
-          <li class="active">Low Back Pain</li>
+          <li class="active">Degenerative Disc Disease</li>
         </ol>
       </div>
 
@@ -145,27 +146,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="entry clearfix">
                 <div class="entry-content notopmargin">
 
-                  <p>Low back pain is no laughing matter. Whether it is due to a sports injury, bad posture, or a repetitive strain injury at work, most of us, at one point in time, have had low back pain. No matter what the cause, low back pain is a disruption to our lives. It can be a constant dull ache that never goes away, or a sharp piercing pain that stops us from normal function in our lives.
+                  <p>Degeneration of the vertebral discs is a natural process as a person ages. The discs undergo slow wear and tear over many years, as a side effect of normal daily stresses. As this process continues the size and shape of the discs change, the discs loose vertical height, therefore leading to less space between each vertebra. Though not always symptomatic, Degenerative Disc Disease(DDD) can cause acute or chronic pain.</p>
 
-</p>
+<p>Between the vertebrae, exiting from the spinal cord travel the <img class="fleft rightmargin-sm leftmargin-sm" alt="vertabra" src="https://www.kwmassage.com/assets/images/vertabra.png" />peripheral nerves, which connect the central nervous system to the limbs. As the space between the vertebrae decreases, the root of the peripheral nerves can become compressed. This compression can create pain, weakness and numbness in the low back, hips and legs.</p>
 
-<p>A worst case scenario would be a disc herniation. This will cause sharp pain in the low back, shooting pain down the back of the legs, and muscle weakness. A disc herniation is most often caused by lifting heavy objects improperly. The most frustrating thing about a disc herniation is that it will not heal on its own. Though a disc herniation is permanent, the pain can be managed quite well with a combination of regular exercise, <a href="https://www.kwmassage.com/clinic-information/index.html">massage therapy treatments</a>, chiropractic treatments, acupuncture treatments, and other alternative health care treatments.</p>
+<p>Treatment for DDD depends to many factors including stage of degeneration, how acute or chronic it is, compounding injuries, age and posture all play a role in how to approach treatment. Treatment can range from medical intervention with anti-inflammatories to surgeries or paramedical services like physiotherapy, chiropractors or massage therapy. Also, regular exercise and stretching can be very helpful but it is important to see a medical professional who can do a proper assessment any time you are experiencing back pain, as it's easy to make an injuries worse by not know what exercises and stretches will help and which ones will hurt.</p>
 
-<p>Often, that sharp localized pain in the low back is a facet joint compression. The facet joints are the small joints on either side of the spine between every spinal junction. An excessive backward bend or twist can compress or irritate these sensitive joints causing sharp pain. When one of these joints gets compressed, it can be very difficult to release these joints as the muscles around the joint will go into spasm holding the joint tight in its compressed position. It is very helpful to have a series of <a href="https://www.kwmassage.com/clinic-information/index.html">massage therapy </a>and chiropractic treatments to help correct this condition.</p>
-
-<p>Deep dull pain is often associated with muscle dysfunction. There are many common ways that muscles will create pain. <a title="Trigger Points and Trigger Point Therapy" href="https://www.kwmassage.com/generalmassagetherapy/trigger-points-and-trigger-point-therapy/index.html">Trigger Points (TRP)</a>, scar tissue, spasms, and hypertonicity are the most common muscle dysfunctions that I see in my massage therapy <a title="clinic" href="https://www.kwmassage.com/clinic-information/index.html">clinic</a>.</p>
-
-<p>All of these muscle dysfunctions are created by chronic repetitive actions, and these actions are especially harmful when the body is out of alignment or in an imbalanced position. People perform repetitive actions every single day, and sometimes without even realizing it:</p>
-
-<ul class="leftmargin">
-	<li>moms carrying children on one hip</li>
-	<li>manufacturing workers repetitively bending or twisting</li>
-	<li>painters repeating the same brush or roller strokes</li>
-	<li>construction labourers digging, hammering, or lifting</li>
-	<li>office workers seated at a desk all day</li>
-</ul>
-
-<p>Though we try to do our best to stay in shape, the rigors of daily life can get to be too much for our bodies and minds. <a href="https://www.kwmassage.com/about/testimonials/index.html">Regular massage therapy treatments</a> can help deal with muscle tension build up. <a href="https://www.kwmassage.com/stretching/general-guidelines-for-stretching/index.html">Regular stretching</a> and exercising are very good ways to help keep our muscles healthy and free of pain. Walking, rock climbing, and yoga are my favourite ways to keep my muscles and joints healthy.</p>
 
 
                 </div>
