--- a/_site_production/stretching/how-to-stretch-you-rhomboids/index.html
+++ b/_site_production/stretching/how-to-stretch-you-rhomboids/index.html
@@ -318,7 +318,7 @@ to revert back to php mailer incert: /include/footercontact.php in the form acti
                             <i class="icon-facebook"></i>
                         </a>
                         <!-- Google+ badge -->
-                        <a href="https://plus.google.com/+Kwmassage?prsrc=3" class="social-icon si-dark si-gplus">
+                        <a href="https://plus.google.com/u/0/114786026162432224768" class="social-icon si-dark si-gplus">
                             <i class="icon-gplus"></i>
                             <i class="icon-gplus"></i>
                         </a>
