--- a/_site_production/stretching/how-to-stretch-psoase-muscle/index.html
+++ b/_site_production/stretching/how-to-stretch-psoase-muscle/index.html
@@ -314,7 +314,7 @@ to revert back to php mailer incert: /include/footercontact.php in the form acti
                             <i class="icon-facebook"></i>
                         </a>
                         <!-- Google+ badge -->
-                        <a href="https://plus.google.com/u/0/114786026162432224768" class="social-icon si-dark si-gplus">
+                        <a href="https://plus.google.com/u/0/114786026162432224768?rel=author" class="social-icon si-dark si-gplus">
                             <i class="icon-gplus"></i>
                             <i class="icon-gplus"></i>
                         </a>
