--- a/_site_production/knowledge-centre/general-massage-therapy/index.html
+++ b/_site_production/knowledge-centre/general-massage-therapy/index.html
@@ -150,6 +150,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
   	
   		<p>
+  			<h4>The Acuball</h4>
+  			<div class="date">08 Nov 2018</div>
+  			<p>I'm trying something new this month, I've brought in a product for resale. The <a href="https://acuball.com/product/dr-cohens-acuball/?affiliates=19" target="_blank" title="Acuball">Acuball</a> is something that has been floating around my house for a few years. It's something that I lean on regularly for my own aches and pains. And I often find myself recommending my clients go buy one somewhere else or use a lacrosse ball to achieve a similar effect. I feel that it will be helpful to keep a few in the clinic so that clients can take home exactly what I’m showing them. </p>
+
+ ...<a title="Read More" href="https://www.kwmassage.com/generalmassagetherapy/acuball/">read more...</a>
+  		</p>
+  	
+  
+
+  
+  	
+  		<p>
   			<h4>Degenerative Disc Disease</h4>
   			<div class="date">01 Nov 2018</div>
   			<p>Degeneration of the vertebral discs is a natural process as a person ages. The discs undergo slow wear and tear over many years, as a side effect of normal daily stresses. As this process continues the size and shape of the discs change, the discs loose vertical height, therefore leading to less space between each vertebra. Though not always symptomatic, Degenerative Disc Disease(DDD) can cause acute or chronic pain.</p>
@@ -580,7 +592,7 @@ to revert back to php mailer incert: /include/footercontact.php in the form acti
                             <i class="icon-facebook"></i>
                         </a>
                         <!-- Google+ badge -->
-                        <a href="https://plus.google.com/u/0/114786026162432224768?rel=author" class="social-icon si-dark si-gplus">
+                        <a href="https://plus.google.com/u/0/+JeremyBissonnette?rel=author" class="social-icon si-dark si-gplus">
                             <i class="icon-gplus"></i>
                             <i class="icon-gplus"></i>
                         </a>
