--- a/_site_production/knowledge-centre/rock-climbing/index.html
+++ b/_site_production/knowledge-centre/rock-climbing/index.html
@@ -42,6 +42,9 @@
   <meta name="description" content="Rock climbing and how to treat climbing injuries by massage therapist Kitchener">
   <meta name="keywords" content="Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, sports massage, rock climbing injury, rock climbing">
   <meta name="author" content="Jeremy Bissonnette, Registered Massage Therapist" >
+  <link rel="icon" 
+      type="image/png" 
+      href="https://www.kwmassage.com/assets/images/logo_kitchener_massage.png">
  
 </head>
 
