--- a/_site_production/rock_climbing/climbers-elbow-2/index.html
+++ b/_site_production/rock_climbing/climbers-elbow-2/index.html
@@ -42,6 +42,9 @@
   <meta name="description" content="Left untreated, climber’s elbow (tennis elbow) can worsen quickly and take you out of climbing for a long time. If you catch it quickly enough, you might be ...">
   <meta name="keywords" content="Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy, climbing, climbing injury, elbow injury">
   <meta name="author" content="Jeremy Bissonnette, Registered Massage Therapist" >
+  <link rel="icon" 
+      type="image/png" 
+      href="https://www.kwmassage.com/assets/images/logo_kitchener_massage.png">
  
 </head>
 
