--- a/_site_production/generalmassagetherapy/what-can-deep-tissue-massage-treat/index.html
+++ b/_site_production/generalmassagetherapy/what-can-deep-tissue-massage-treat/index.html
@@ -43,6 +43,9 @@
 ">
   <meta name="keywords" content="Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy">
   <meta name="author" content="Jeremy Bissonnette, Registered Massage Therapist" >
+  <link rel="icon" 
+      type="image/png" 
+      href="https://www.kwmassage.com/assets/images/logo_kitchener_massage.png">
  
 </head>
 
