--- a/_site_production/knowledge-centre/general-massage-therapy/index.html
+++ b/_site_production/knowledge-centre/general-massage-therapy/index.html
@@ -42,6 +42,9 @@
   <meta name="description" content="What is Deep Tissue Massage? Trigger Points and Trigger Point Therapy; Does Deep Tissue Massage Hurt? Why does Jeremy choose to practice Deep Tissue">
   <meta name="keywords" content="Kitchener massage therapy, Kitchener massage therapist, massage therapist Kitchener , massage therapy Kitchener, Kitchener registered massage therapy, Kitchener registered massage therapist, registered massage therapist Kitchener , registered massage therapy Kitchener, Deep tissue massage, massage, sports massage, Kitchener sports massage, massage therapy, massage therapist, registered massage therapist, registered massage therapy">
   <meta name="author" content="Jeremy Bissonnette, Registered Massage Therapist" >
+  <link rel="icon" 
+      type="image/png" 
+      href="https://www.kwmassage.com/assets/images/logo_kitchener_massage.png">
  
 </head>
 
