--- a/_site_production/stretching/stretch-your-upper-trapezius-muscle-2/index.html
+++ b/_site_production/stretching/stretch-your-upper-trapezius-muscle-2/index.html
@@ -43,6 +43,9 @@
 ">
   <meta name="keywords" content="">
   <meta name="author" content="Jeremy Bissonnette, Registered Massage Therapist" >
+  <link rel="icon" 
+      type="image/png" 
+      href="https://www.kwmassage.com/assets/images/logo_kitchener_massage.png">
  
 </head>
 
